--- a/style.css
+++ b/style.css
@@ -35,6 +35,36 @@ header {
 .ProductosVenta {
   height: 500px;
 }
+.carrito {
+  margin: 5%;
+  font-weight: 700;
+  bottom: 0;
+  display: block; }
+  .carrito h2 {
+    font-size: 50px;
+    margin: 20px;
+    font-weight: 700; }
+  .carrito p {
+    margin: 20px; }
+  .carrito .tusProductos {
+    width: 100%;
+    height: 500px;
+    background-color: #f2f2f2;
+    border: solid 2px #c71fc7;
+    box-shadow: 1px 1px 12px -3px rgba(40, 9, 59, 0.75) inset;
+    -webkit-box-shadow: 1px 1px 12px -3px rgba(40, 9, 59, 0.75) inset;
+    -moz-box-shadow: 1px 1px 12px -3px rgba(40, 9, 59, 0.75) inset;
+    margin-bottom: 50px; }
+  .carrito .datos {
+    display: flex;
+    justify-content: space-between; }
+    .carrito .datos h3, .carrito .datos h4, .carrito .datos h5 {
+      font-size: 20px;
+      font-weight: 600;
+      margin: 27px; }
+  .carrito button {
+    background-color: #a318a3;
+    border: solid 2px #a318a3; }
 
 .pie {
   bottom: 0;
