--- a/css/style.css
+++ b/css/style.css
@@ -32,6 +32,11 @@ header {
           header nav ul li a:hover {
             color: antiquewhite;
             transition: 0.3s; }
+            .hero{
+              text-align: center;
+              font-size:  40px;
+              font-weight: 700;
+            }          
 .ProductosVenta {
   height: 500px;
 }
@@ -48,7 +53,7 @@ header {
     margin: 20px; }
   .carrito .tusProductos {
     width: 100%;
-    height: 500px;
+    height: auto;
     background-color: #f2f2f2;
     border: solid 2px #c71fc7;
     box-shadow: 1px 1px 12px -3px rgba(40, 9, 59, 0.75) inset;
@@ -65,7 +70,6 @@ header {
   .carrito button {
     background-color: #a318a3;
     border: solid 2px #a318a3; }
-
     #carrito-container {
       height: 400px; 
       overflow-y: scroll; 
