--- a/css/style.css
+++ b/css/style.css
@@ -51,9 +51,11 @@ header {
     font-weight: 700; }
   .carrito p {
     margin: 20px; }
+    
   .carrito .tusProductos {
     width: 100%;
     height: auto;
+    position: relative;
     background-color: #f2f2f2;
     border: solid 2px #c71fc7;
     box-shadow: 1px 1px 12px -3px rgba(40, 9, 59, 0.75) inset;
